added an about us page that links to everyones github

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="navbar">
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About us</a>
+            <a href="index.html">Home</a>
+            <a href="aboutUs.html">About us</a>
             <a href="#">Register Now!</a>
             <a href="#">Contact</a>
         </nav>
