added a link to the team page when you click on contact

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,7 +12,7 @@
         <a href="index.html">Home</a>
         <a href="aboutUs.html">About us</a>
         <a href="#">Register Now!</a>
-        <a href="#">Contact</a>
+        <a href="https://github.com/BW-SaveTheAnimalsTeam3">Contact</a>
     </nav>
     <h1>Meet The Team</h1>
     <p>Meet the members of the save the animals team 3!</p>
