--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html">Home</a>
             <a href="aboutUs.html">About us</a>
             <a href="#">Register Now!</a>
-            <a href="#">Contact</a>
+            <a href="https://github.com/BW-SaveTheAnimalsTeam3">Contact</a>
         </nav>
     </div>
     <header>
