fixed some mistakes

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -20,7 +20,7 @@
 <section class="AboutSection">
     <dvi class="teamlead">
         <h2>Team Lead</h2>
-        <h3>Thomas barret</h3>
+        <h3>Thomas Barret</h3>
         <p>
             Title: Team leader<br>
             Cohort:Web28 TL<br>
@@ -40,7 +40,7 @@
         <h2>Front End Developer</h2>
         <h3>John Kirtly</h3>
         <p>
-            Title: front end developer<br>
+            Title: Front End Developer<br>
             Cohort: Web27<br>
             Github: <a href="https://github.com/orgs/BW-SaveTheAnimalsTeam3/people/johnkirtley">Here</a>
         </p>
