--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <img src="images/logo.png" alt="simple green logo" id="logo">
         <div class="title">
             <h1>Save The Animals</h1>
-            <p>Key Conservation is helping conservationist to recieve critical funding and increased global support
+            <p>Key Conservation is helping conservationist to receive critical funding and increased global support
                 through an app that provides real-time updates on day-to-day campaings. We can stop global extinction if
                 we utilize new technology and interact with supporters in many new ways!</p>
         </div>
     </header>
     <section>
-        <div class="donators">
+        <div class="supporters">
             <h2>Supporters</h2>
             <p>As a supporter you have the ability to view the details of a compaign which include urgency level,
                 funding goal of the campaign and info on the conservationist that posted the campaign</p>
@@ -42,10 +42,10 @@
     </section>
     <footer>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About us</a>
+            <a href="index.html">Home</a>
+            <a href="aboutUs.html">About us</a>
             <a href="#">Register Now!</a>
-            <a href="#">Contact</a>
+            <a href="https://github.com/BW-SaveTheAnimalsTeam3">Contact</a>
         </nav>
     </footer>
 </body>
