added hover effects and an animation for fun

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -48,9 +48,10 @@
     <div class="unit1">
         <h2>Marketing Front End Developer</h2>
         <h3>Nick Migel</h3>
-        Title: Marketing Front End Developer<br>
-        Cohort: Web28<br>
-        Github: <a href="https://github.com/orgs/BW-SaveTheAnimalsTeam3/people/rivercrow25">Here</a>
+        <p>Title: Marketing Front End Developer<br>
+            Cohort: Web28<br>
+            Github: <a href="https://github.com/orgs/BW-SaveTheAnimalsTeam3/people/rivercrow25">Here</a>
+        </p>
     </div>
 </section>
 <footer>
