added the link to my teams app

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="aboutUs.html">About us</a>
-            <a href="#">Register Now!</a>
+            <a href="https://front-end.bw-save-the-animals.now.sh/">Register Now!</a>
             <a href="https://github.com/BW-SaveTheAnimalsTeam3">Contact</a>
         </nav>
     </div>
@@ -44,7 +44,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="aboutUs.html">About us</a>
-            <a href="#">Register Now!</a>
+            <a href="https://front-end.bw-save-the-animals.now.sh/">Register Now!</a>
             <a href="https://github.com/BW-SaveTheAnimalsTeam3">Contact</a>
         </nav>
     </footer>
