i didnt mispell logans name idk what your talking about

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -29,7 +29,7 @@
     </dvi>
     <div class="unit3">
         <h2>Back End Developer</h2>
-        <h3>Logab Sorensen</h3>
+        <h3>Logam Sorensen</h3>
         <p>
             Title: Back End Developer<br>
             Cohort: Web25<br>
