--- a/aboutUs.html
+++ b/aboutUs.html
@@ -11,7 +11,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="aboutUs.html">About us</a>
-        <a href="https://front-end.bw-save-the-animals.now.sh/">Register Now!</a>
+        <a href="https://fervent-aryabhata-ddb2ae.netlify.com/">Register Now!</a>
         <a href="https://github.com/BW-SaveTheAnimalsTeam3">Contact</a>
     </nav>
     <h1>Meet The Team</h1>
